(website)fix: horizontal scrolling

--- a/website-v2/src/app.css
+++ b/website-v2/src/app.css
@@ -9,5 +9,6 @@
 html,
 body {
     width: 100%;
+    overflow-x: hidden;
     height: 100%;
 }
